hello-chris-ai-homelab/.k8s/n8n/resources/deployment.apps__n8n.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "8"
  labels:
    app: n8n
  name: n8n
  namespace: n8n
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: n8n
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-11-06T19:33:45-05:00"
      creationTimestamp: null
      labels:
        app: n8n
    spec:
      containers:
      - env:
        - name: N8N_ENCRYPTION_KEY
          valueFrom:
            secretKeyRef:
              key: N8N_ENCRYPTION_KEY
              name: n8n-secrets
        - name: N8N_BASIC_AUTH_ACTIVE
          value: "true"
        - name: N8N_BASIC_AUTH_USER
          valueFrom:
            secretKeyRef:
              key: N8N_BASIC_AUTH_USER
              name: n8n-secrets
        - name: N8N_BASIC_AUTH_PASSWORD
          valueFrom:
            secretKeyRef:
              key: N8N_BASIC_AUTH_PASSWORD
              name: n8n-secrets
        - name: GENERIC_TIMEZONE
          value: UTC
        - name: N8N_PORT
          value: "5678"
        - name: N8N_PROTOCOL
          value: https
        - name: N8N_HOST
          value: n8n-n8n.apps.ironman.cjlabs.dev
        - name: WEBHOOK_URL
          value: https://n8n-n8n.apps.ironman.cjlabs.dev/
        - name: N8N_SKIP_WEBHOOK_DEREGISTRATION_SHUTDOWN
          value: "true"
        - name: NODE_ENV
          value: production
        image: n8nio/n8n:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: n8n
        ports:
        - containerPort: 5678
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/node/.n8n
          name: n8n-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
      serviceAccount: n8n-sa
      serviceAccountName: n8n-sa
      terminationGracePeriodSeconds: 30
      volumes:
      - name: n8n-data
        persistentVolumeClaim:
          claimName: n8n-data
