hello-chris-ai-homelab/.k8s/n8n/resources/service__n8n.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
spec:
  ports:
  - name: http
    port: 5678
    protocol: TCP
    targetPort: http
  selector:
    app: n8n
  sessionAffinity: None
  type: ClusterIP
