hello-chris-ai-homelab/.k8s/n8n/resources/route.route.openshift.io__n8n.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: n8n
  namespace: n8n
spec:
  host: n8n-n8n.apps.ironman.cjlabs.dev
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: n8n
    weight: 100
  wildcardPolicy: None
